<resources>
    <string name="app_name">Lab4_znowu</string>
    <string name="task_title">task_title</string>
    <string name="task_description">task_description</string>
    <string name="add_task">add_task</string>
    <string name="default_description" />
    <string name="default_title" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_selected_msg" />
    <string name="delete_question" > Do you want to remove contact?</string>
    <string name="call_question" > Do u want to call?</string>
    <string name="dialog_confirm" >YES</string>
    <string name="dialog_cancel" >NO</string>
    <string name="delete_dialog_tag" />
    <string name="long_click_msg" />
    <string name="delete_cancel_msg" />
    <string name="retry_msg" />
    <string name="name">name</string>
    <string name="surrname">surrname</string>
    <string name="birthday">birthday</string>
    <string name="number">number</string>
    <string name="default_bir" />
    <string name="default_phone" />
    <string name="add_contact" />
    <string name="add">Add</string>
    <string name="phone">phone</string>
</resources>
